# whatspy

./: .gitignore  README.md  example.py  index.py  pyproject.toml  setup.sh
sessions/: bridge.js  package-lock.json  package.json
whatsspy/: __init__.py  client.py
whatsspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
